basic skeleton for elements

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,1 @@
-<div class="container">
-  <div class="col-md-12">
-    <div class="row">
-      <p>Row One</p>
-    </div>
-    <div class="row">
-      <p>Row Two</p>
-    </div>
-  </div>
-</div>
+<app-layout></app-layout>
