fixes import errors

--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -10,6 +10,7 @@
         <div class="row">
             <div class="col col-md-6">
                 <app-shoppingList></app-shoppingList>
+                <app-shopping-list-edit></app-shopping-list-edit>
             </div>
             <div class="col col-md-6">
                 <app-recipeList></app-recipeList>
