adds recipe model

--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,8 +1,4 @@
-<div class="container">
-    <h2>
-        This is the root component
-    </h2>
-    <button class="btn btn-primary">button</button>
+<div class="container-fluid">
     <div class="col-md-12">
         <div class="row">
             <app-header></app-header>
