--- a/src/app/components/shoppingList/shoppingList.component.html
+++ b/src/app/components/shoppingList/shoppingList.component.html
@@ -1,1 +1,10 @@
-<h3>Shopping List</h3>
+<div class="row" style="margin-bottom: 10px">
+    <div class="col-xs-12">
+        <button class="btn btn-success">New Recipe</button>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <h3>shopping list</h3>
+    </div>
+</div>
