--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -5,8 +5,12 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <app-shoppingList></app-shoppingList>
-                <app-recipeList></app-recipeList>       
+                <app-recipes></app-recipes>     
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <app-shoppingList></app-shoppingList>     
             </div>
         </div>
     
