--- a/src/app/components/shoppingList/shoppingList.component.html
+++ b/src/app/components/shoppingList/shoppingList.component.html
@@ -1,10 +1,14 @@
-<div class="row" style="margin-bottom: 10px">
-    <div class="col-xs-12">
-        <button class="btn btn-success">New Recipe</button>
-    </div>
-</div>
 <div class="row">
-    <div class="col-xs-12">
-        <h3>shopping list</h3>
+    <div class="col-xs-10">
+        <app-shopping-list-edit></app-shopping-list-edit>
+        <hr>
+            <ul class="list-group">
+                <a class="list-group-item" 
+                style="cursor: pointer"
+                *ngFor="let ingredient of ingredients"
+                >
+                {{ingredient.name}} ( {{ingredient.amount}} )
+            </a>
+        </ul>
     </div>
 </div>
