adds basic angular binding steps

--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -3,14 +3,17 @@
         <div class="row">
             <app-header></app-header>
         </div>
-        <div class="row">
-            <div class="col-md-12">
-                <app-recipes></app-recipes>     
+        <div class="container">
+
+            <div class="row">
+                <div class="col-md-12">
+                    <app-recipes></app-recipes>     
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <app-shoppingList></app-shoppingList>     
+            <div class="row">
+                <div class="col-md-12">
+                    <app-shoppingList></app-shoppingList>     
+                </div>
             </div>
         </div>
     
