--- a/src/app/components/shoppingList/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/components/shoppingList/shopping-list-edit/shopping-list-edit.component.html
@@ -8,14 +8,14 @@
                 </div>
                 <div class="col-sm-2 form-group">
                     <label for="amount">Amount</label>
-                    <input type="text" id="amount" class="form-control">  
+                    <input type="number" id="amount" class="form-control">  
                 </div>
-                <div class="row">
-                    <div class="col-xs-12">
-                        <button class="btn btn-success" type="submit">Add</button>
-                        <button type="button" class="btn btn-danger">Delete</button>
-                        <button class="btn btn-primary" type="button">Clear</button>
-                    </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12" >
+                    <button class="btn btn-success" type="submit">Add</button>
+                    <button type="button" class="btn btn-danger" style="margin: 5px">Delete</button>
+                    <button class="btn btn-primary" type="button">Clear</button>
                 </div>
             </div>
         </form>
