--- a/src/app/components/recipes/recipeList/recipeList.component.html
+++ b/src/app/components/recipes/recipeList/recipeList.component.html
@@ -7,12 +7,12 @@
     <div class="col-xs-12">
         <app-recipeItem
         *ngFor="let recipe of recipes" 
-        [recipe]="recipe"
+        [recipeItem]="recipe"
         >
         </app-recipeItem>
 
         <!-- this code vvv was moved to recipeItem - binding component data -->
-        
+
         <!-- <a href="#" 
         class="list-group-item clearfix"
         *ngFor="let recipe of recipes" 
