initial event edits

--- a/src/app/components/recipes/recipeItem/recipeItem.component.html
+++ b/src/app/components/recipes/recipeItem/recipeItem.component.html
@@ -1,5 +1,6 @@
 <a href="#" 
 class="list-group-item clearfix"
+(click)="onRecipeSelect()"
 >
     <div ngClass="pull-left">
         <h4 class="list-group-item-heading">{{recipe.name}}</h4>
