--- a/src/app/components/recipes/recipeDetail/recipeDetail.component.html
+++ b/src/app/components/recipes/recipeDetail/recipeDetail.component.html
@@ -1,11 +1,11 @@
-<div class="row">
+<div class="row" *ngIf="recipe">
     <div class="col-xs-12">
-        <img src="" alt="" class="img-responsive">
+        <img [src]="recipe.imagePath" alt="recipe.name" class="img-responsive">
     </div>
 </div>
-<div class="row">
+<div class="row" *ngIf="recipe">
     <div class="col-xs-12">
-        <h1>Recipe Name</h1>
+        <h1>{{recipe.name}}</h1>
     </div>
 </div>
 <div class="row">
@@ -20,9 +20,15 @@
         </div>
     </div>
 </div>
-<div class="row">
+<div class="row" *ngIf="recipe">
     <div class="col-xs-12">
-        Description 
+        <div ngClass="pull-left">
+            <h4 class="list-group-item-heading">{{recipe.name}}</h4>
+            <p class="list-group-item-text">{{recipe.description}}</p>
+        </div>
+        <span class="pull-right">
+            <img [src]="recipe.imagePath" alt="" class="img-responsive" style="max-height: 50px;">
+        </span> 
     </div>
 </div>
 <div class="row">
