--- a/src/app/components/recipes/recipes.component.html
+++ b/src/app/components/recipes/recipes.component.html
@@ -1,8 +1,8 @@
 <div class="row">
     <div class="col-md-5">
-        <app-recipeList></app-recipeList>
+        <app-recipeList (selectedRecipe)="handleSelectedRecipe($event)"></app-recipeList>
     </div>
     <div class="col-md-7">
-        <app-recipeDetail></app-recipeDetail>
+        <app-recipeDetail [recipeItem]="selectedRecipe"></app-recipeDetail>
     </div>
 </div>
