fake form submission added

--- a/src/app/components/recipes/recipeList/recipeList.component.html
+++ b/src/app/components/recipes/recipeList/recipeList.component.html
@@ -8,7 +8,7 @@
         <app-recipeItem
         *ngFor="let recipe of recipes" 
         [recipeItem]="recipe"
-        (selectedRecipe)="handleSelectedRecipe($event)"
+        (selectedRecipe)="handleSelectedRecipe(recipe)"
         >
         </app-recipeItem>
 
