--- a/src/app/components/recipes/recipes.component.html
+++ b/src/app/components/recipes/recipes.component.html
@@ -3,6 +3,9 @@
         <app-recipeList (selectedRecipe)="handleSelectedRecipe($event)"></app-recipeList>
     </div>
     <div class="col-md-7">
-        <app-recipeDetail [recipeItem]="selectedRecipe"></app-recipeDetail>
+        <app-recipeDetail *ngIf="selectedRecipe; else infoText" [recipeItem]="selectedRecipe"></app-recipeDetail>
+        <ng-template #infoText>
+            <p>Please Select a Recipe</p>
+        </ng-template>
     </div>
 </div>
