--- a/src/app/components/shoppingList/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/components/shoppingList/shopping-list-edit/shopping-list-edit.component.html
@@ -4,18 +4,26 @@
             <div class="row">
                 <div class="col-sm-5 form-group">
                     <label for="name">Name</label>
-                    <input type="text" id="name" class="form-control">
+                    <input 
+                    type="text" 
+                    id="name" 
+                    class="form-control"
+                    #nameInput>
                 </div>
                 <div class="col-sm-2 form-group">
                     <label for="amount">Amount</label>
-                    <input type="number" id="amount" class="form-control">  
+                    <input 
+                    type="number" 
+                    id="amount" 
+                    class="form-control"
+                    #amountInput>  
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12" >
-                    <button class="btn btn-success" type="submit">Add</button>
-                    <button type="button" class="btn btn-danger" style="margin: 5px">Delete</button>
-                    <button class="btn btn-primary" type="button">Clear</button>
+                    <button class="btn btn-success" type="submit" (click)="onAdd()">Add</button>
+                    <button type="button" class="btn btn-danger" style="margin: 5px" (click)="onDelete()">Delete</button>
+                    <button class="btn btn-primary" type="button" (click)="onClear()">Clear</button>
                 </div>
             </div>
         </form>
